# harpy

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  example.html
client-engine/: ce_grpc_callback_server.go  ce_grpc_server.go  ce_live_memory.go  config.json  go.mod  go.sum  main.bkp  main.go
compose_engine/: docker-compose.yaml
default/: global_config.json
py-client/: main.py  notebook.ipynb  pi_estimator_bad.py  pi_estimator_good.py  pyproject.toml  setup.py
py-client/sdk/: __init__.py
py-client/sdk/configs/: __init__.py
py-client/sdk/grpc_ce_protocol/: ceprotocol_pb2_grpc.py
py-client/sdk/processing/: types.py
py-client/sdk/quack/: __init__.py
py-client/sdk/session/: __init__.py
py-client/sdk/tasksets/: __init__.py
pyharpy/: main.py  notebook.ipynb  pi_estimator_bad.py  pi_estimator_good.py  pyproject.toml  setup.py
pyharpy/harpy/: __init__.py
pyharpy/harpy/configs/: __init__.py
pyharpy/harpy/dataset/: __init__.py  base_classes.py  dataset.py
pyharpy/harpy/dataset/formats/: memory.py  parquet.py  sql.py
pyharpy/harpy/exceptions/: user_facing.py
pyharpy/harpy/grpc_ce_protocol/: ceprotocol_pb2.py  ceprotocol_pb2_grpc.py
pyharpy/harpy/primitives/: __init__.py
pyharpy/harpy/processing/: remote_exec.py  types.py
pyharpy/harpy/quack/: __init__.py
pyharpy/harpy/session/: FileSystem.py  __init__.py  block_read_write_proxy.py  file_system.py  packages.py
pyharpy/harpy/tasksets/: __init__.py  code_quality_check.py  consts.py  progress_displays.py  task_definitions.py  tasks.py
(+106 files in other folders)
