[tool.poetry]
name = "py-client"
version = "0.1.0"
description = ""
authors = ["Caio Cominato <caiopetrellicominato@gmail.com>"]
readme = "README.md"
packages = [{include = "py_client"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
protobuf = "5.27.2"
cloudpickle = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
