[tool.poetry]
name = "pyharpy"
version = "0.1.0"
description = ""
authors = ["Caio Cominato <caiopetrellicominato@gmail.com>"]
readme = "README.md"
packages = [{include = "harpy"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
protobuf = "5.29.0"
cloudpickle = "^3.0.0"
pandas = "^2.2.3"
duckdb = "^1.1.1"
ipykernel = "^6.29.5"
deltalake = "0.20.2"
tqdm = "^4.66.5"
pytest = "^8.3.3"
tornado = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
